--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -29,8 +29,8 @@
     "import sys\n",
     "\n",
     "# Other package imports\n",
-    "# import numpy as np\n",
-    "# import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "# from matplotlib import pyplot as plt"
    ]
   },
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_root = os.path.abspath(os.path.join(os.getcwd(), os.pardir, os.pardir))\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
     "data_folder = os.path.join(project_root, 'data')\n",
     "data_folder_raw = os.path.join(data_folder, 'raw')\n",
     "src_folder = os.path.join(project_root, 'src')"
@@ -189,9 +189,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
